productions/veadk/archives/1.0.0/zh/components/tools/index.mdx
---
title: "概述"
en_link: "/productions/veadk/archives/1.0.0/en/components/tools"
---

工具让智能体在推理之外获得与外部世界交互的能力：网页搜索、代码执行、图像与视频生成、访问第三方服务等。VeADK 把这些能力封装为可直接注册的工具，智能体在运行时根据用户输入与指令**自主决定**是否调用，框架在调用时自动执行并把结果回填到推理过程。

## 为智能体添加工具

无论何种类型的工具，注册方式一致：把工具放进 `Agent` 的 `tools` 列表。

```python lines
from veadk import Agent
from veadk.tools.builtin_tools.web_search import web_search

agent = Agent(tools=[web_search])
```

注册后，智能体会依据函数签名 / 工具描述、用户输入与自身指令，决定何时调用工具、如何传参。多个工具可同时注册，智能体在推理过程中按需选择。

## 工具类别

VeADK 的工具按接入方式与用途分为以下几类。

| 类别 | 说明 | 文档 |
| :--- | :--- | :--- |
| 内置工具 | VeADK 预封装的原生函数工具，如网页搜索、图像与视频生成、代码沙箱 | [网页搜索](/productions/veadk/archives/1.0.0/zh/components/tools/web-search) |
| 内置 MCP 工具 | 基于 MCP 接入的工具集，如飞书、LAS 数据湖、视频云、MCP Router、Supabase | [飞书 Lark MCP](/productions/veadk/archives/1.0.0/zh/components/tools/lark) |
| 自定义工具 | 把任意 Python 函数封装成工具，扩展智能体能力 | [自定义工具](/productions/veadk/archives/1.0.0/zh/components/tools/custom-function) |
| 系统工具 | 框架根据智能体配置自动挂载的知识库与长期记忆检索工具 | [知识库检索](/productions/veadk/archives/1.0.0/zh/components/tools/load-knowledgebase) |
| 护栏工具 | 基于回调的内容安全审查，拦截不安全的输入与输出 | [内容安全护栏](/productions/veadk/archives/1.0.0/zh/components/security/content-safety) |
| 飞书 Channel 扩展 | 把飞书机器人的入站消息桥接到 `Runner` | [飞书 Channel 扩展](/productions/veadk/archives/1.0.0/zh/components/extensions/feishu-channel) |

<Note>
内置工具与内置 MCP 工具多依赖火山引擎相关服务，使用前请开通对应服务并完成 AK/SK、API Key 等鉴权配置；系统工具由框架自动管理，无需手动加入 `tools` 列表。
</Note>
